# kat_ppisp

./: KATADA.md  README.md  pyproject.toml
katada/: __init__.py  splatfacto_ppisp.py  version.py
ppisp/: __init__.py  bindings.h
ppisp/src/: ppisp_constants.h  ppisp_impl.cu  ppisp_math.cuh  ppisp_math_bwd.cuh
tests/: README.md  test_regularization_loss.py
