[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppisp"
dynamic = ["version"]
description = "CUDA extension for PPISP"
requires-python = ">=3.10"
# torch is a runtime dep but omitted here so `pip install ppisp` does not upgrade Colab torch
dependencies = ["matplotlib", "numpy"]
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "NVIDIA Corporation" },
]

[tool.setuptools.dynamic]
version = {attr = "ppisp._version.__version__"}

[tool.setuptools]
include-package-data = false

[project.optional-dependencies]
nerfstudio = ["nerfstudio", "gsplat", "pytorch-msssim"]

[project.entry-points."nerfstudio.method_configs"]
splatfacto-ppisp = "katada.splatfacto_ppisp:splatfacto_ppisp_method"

[tool.setuptools.packages.find]
include = ["ppisp", "katada"]
exclude = ["ppisp.src", "tests", "tests.*"]

